fixed footer spacing

--- a/src/css/zro.css
+++ b/src/css/zro.css
@@ -407,6 +407,8 @@ video {
 }
 .ln {
   display: inline;
+  margin-right: 15px;
+  margin-left: 15px;
 }
 .nodot {
   list-style: none;
